--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -55,9 +55,8 @@
                       Spotify Project
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                      <a class="dropdown-item" href="/project">Project</a>
-                      <a class="dropdown-item" target="_blank" href="https://github.com/Dorothyhung/SpotifyAnalysis">Project Code</a>
-                      <a class="dropdown-item" target="_blank" href="http://spotifyscraper.dorothyhung.net">Spotify Analysis Website</a>
+                      <a class="dropdown-item" target="_blank" href="https://spotifyaudioanalysis.com/">Spotify Analysis App</a>
+                      <a class="dropdown-item" target="_blank" href="https://github.com/Dorothyhung/P320-Spotify-API-Project">Project Code</a>
                     </div>
                   </div>
                   <div class="dropdown show">
@@ -65,11 +64,9 @@
                       More Projects
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                      <a class="dropdown-item" id="flaskapp" href="/flaskapp">Flask Website</a>
                       <a class="dropdown-item" id="game" href="/game">Game</a>
+                      <a class="dropdown-item" id="game" href="https://impervious-google-maps.vercel.app/">Impervious Map</a>
                       <a class="dropdown-item" id="avgprogram" target="_blank" href="https://avg.dorothyhung.net">Average Program</a>
-                      <a class="dropdown-item" id="notesapp" href="/notesapp">Notes App</a>
-                      <a class="dropdown-item" href="/horsepower">Horsepower Statistics</a>
                     </div>
                   </div>
                   <a class="nav-item nav-link font-weight-bold" id="contact" href="/contact">Contact Me</a>
