--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -10,24 +10,16 @@
 <h4><b>Student at Bellevue College</b></h4>
 </br>
 <h4><em>
-    BAS, Software (App) Development 2024<br>
-    AAS, Business Data Analysis 2022
+    BAS, Software (App) Development 2025<br>
+    AAS, Business Data Analysis 2023
 </em></h4>
 </br>
-
-<h4>
-    Use the navbar to view resume, Github, Linkedn, and other projects!
-</h4>
-
-
-
-
 
 </br>
 <center><h4><em>Contact me at <a href = "mailto: dorothyh0602@gmail.com">dorothyh0602@gmail.com</a></center>
 </em></h4>
 </br></br>
-<center><img src="/static/images/me.jpg" alt="extremeswag" style="width:105px; height:140px;"></center>
+<!-- <center><img src="/static/images/me.jpg" alt="picture" style="width:105px; height:140px;"></center> -->
 </br></br>
 
 
